# mcpguard

./: .gitignore  CLAUDE.md  LICENSE  README.md  mcpguard_summer_tracker.html  pyproject.toml
.cursor/rules/: learning-mode.mdc
attack/: __init__.py  vulnerable_server.py
attack/payloads/: __init__.py  base.py
docs/: concepts.md
examples/: hello_client.py  hello_server.py
