[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpguard"
version = "0.0.1"
description = "Runtime security gateway for the Model Context Protocol (MCP)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Sriya Katreddi" }]

dependencies = [
    "mcp>=1.27,<2",
    "anthropic>=0.40",
    "PyYAML",
    "jsonschema",
    "jsonlines",
    "rich",
    "jinja2",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["attack*", "gateway*", "report*"]
